----------------------------------------------------------------------
 OmegaT 5.2.0
----------------------------------------------------------------------
  0 Enhancements
  1 Bug fix
  0 Localisation updates
----------------------------------------------------------------------
5.2.0 vs 5.1.0

  Bug fixes:

  - Parsing bug in Moodle filter when string contains ";"
  https://sourceforge.net/p/omegat/bugs/962/

----------------------------------------------------------------------
 OmegaT 5.1.0 (2019-11-04)
----------------------------------------------------------------------
  2 Enhancements
  0 Bug fixes
  7 Localisation updates
----------------------------------------------------------------------
5.1.0 vs 5.0.0

  Implemented requests:

  - Allow users to choose Apertium server
  https://sourceforge.net/p/omegat/feature-requests/1466/

  - Show glossary file name as tooltip in the glossary pane
  https://sourceforge.net/p/omegat/feature-requests/1183/

  Localisation Updates:

  - Belarusian localisation updated to 5.1.0 (UI)
  - Czech localisation updated to 5.1.0 (UI, documentation)
  - Dutch localisation updated to 5.1.0 (UI)
  - Italian localisation updated to 5.1.0 (UI, documentation)
  - Russian localisation updated to 5.1.0 (UI)
  - Turkish localisation updated to 5.1.0 (UI)
  - Ukrainian localisation updated to 5.1.0 (UI)

----------------------------------------------------------------------
 OmegaT 5.0.0 (2019-10-01)
----------------------------------------------------------------------
  3 Enhancements
  1 Bug fix
  9 Localisation updates
----------------------------------------------------------------------
5.0.0 vs 4.3.1

  Implemented requests:

  - Support BCP 47 language tags
  https://sourceforge.net/p/omegat/feature-requests/238/

  - Display fuzzy matches for all translations in the matching language
  https://sourceforge.net/p/omegat/feature-requests/1452/

  - Switch to a non-Oracle runtime: Bundled JRE is now AdoptOpenJDK